--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <div class="progress">
         <div class="progress-bar progress-bar-striped progress-bar-animated" aria-valuemin="0" aria-valuemax="100" id="barraDeProgreso">
-          <span><h1 class="mb-1 display-4" id="porcentajeRestante">78</h1></span>
+          <!-- <span><h1 class="mb-1 display-4" id="porcentajeRestante">78</h1></span> -->
         </div>
       </div>
 
